--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.bignerdranch.android:expandablerecyclerview:3.0.0-RC1'
     compile 'com.android.support:cardview-v7:25.2.0'
     compile 'pro.alexzaitsev:freepager:1.0.1'
+    compile 'info.hoang8f:fbutton:1.0.5'
 }
