--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Events.EventDetailsActivity"
+            android:name=".Events.Event_WorkshopDetailsActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme"
             android:parentActivityName=".MainActivity">
