--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.2.0'
     compile 'pro.alexzaitsev:freepager:1.0.1'
     compile 'info.hoang8f:fbutton:1.0.5'
+    compile 'com.google.android.gms:play-services-maps:10.2.6'
 }
