Runtime Permissions added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
     }
 }
 
+apply plugin: 'android-apt'
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -33,4 +34,7 @@ dependencies {
     compile 'pro.alexzaitsev:freepager:1.0.1'
     compile 'info.hoang8f:fbutton:1.0.5'
     compile 'com.google.android.gms:play-services-maps:10.2.6'
+    apt 'com.github.hotchemi:permissionsdispatcher-processor:2.3.1'
+    compile 'com.github.hotchemi:permissionsdispatcher:2.3.1'
+
 }
