--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/mainactivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,6 +39,7 @@
             android:name=".Events.Event_WorkshopDetailsActivity"
             android:label="@string/app_name"
             android:theme="@style/myTheme"
+            android:screenOrientation="portrait"
             android:parentActivityName=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.EVENTDETAILS" />
