--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,7 @@ dependencies {
     apt 'com.github.hotchemi:permissionsdispatcher-processor:2.3.1'
     compile 'com.github.hotchemi:permissionsdispatcher:2.3.1'
     compile 'me.grantland:autofittextview:0.2.+'
+    compile 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
+
 
 }
